Fix sort of columns when gited-hide-details-mode is enabled
When gited-hide-details-mode is enabled, and we want to sort
by another column, disable gited-hide-details-mode
and enable it after all columns have being printed out.
* gited.el (gited--advice-sort-by-column): New defun.  Use it
to advice `tabulated-list-col-sort'.
(gited-list-branches): Use gited-branch-exists-p.
* .travis.yml: Gited requires Emacs version >= 24.4.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ notifications:
     on_failure: always
 
 env:
-  - EVM_EMACS=emacs-24.3-travis
+# - EVM_EMACS=emacs-24.3-travis # advice-add requires >= 24.4
   - EVM_EMACS=emacs-24.4-travis
   - EVM_EMACS=emacs-24.5-travis
   - EVM_EMACS=emacs-git-snapshot-travis
