* .travis.yml: Add recipes to test for Emacs 25.3 and Emacs 26.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ env:
 # - EVM_EMACS=emacs-24.3-travis # advice-add requires >= 24.4
   - EVM_EMACS=emacs-24.4-travis
   - EVM_EMACS=emacs-24.5-travis
+  - EVM_EMACS=emacs-25.3-travis
+  - EVM_EMACS=emacs-26.2-travis
   - EVM_EMACS=emacs-git-snapshot-travis
 
 before_install:
